[package]
name = "image-sync"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Smart container image cache synchronizer — pulls from external registries only when needed"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.clippy]
pedantic = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
